# SPM

./: .gitignore  CMakeLists.txt  NOTICE  README.md  run.sh
src/: config.cpp  config.hpp  log.hpp  main.cpp
src/lang/: AST.cpp  AST.hpp  buffer.hpp  data.cpp  data.hpp  error.cpp  error.hpp  interpreter.cpp  interpreter.hpp  lexemes.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  smrt.hpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp  types.hpp
utils/: br.sh  build.sh  format.sh  gdb.sh  lfbr.sh  lint.sh  run.sh  valgrind.sh
